--- a/gradle.properties
+++ b/gradle.properties
@@ -3,32 +3,15 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 org.gradle.parallel=true
-
-# Common Project
-minecraftVersion=1.19.4
-parchmentMappingsVersion=2023.03.12
-puzzlesVersion=6.0.8
-minPuzzlesVersion=6.0.8
-resourcePackFormat=13
-dataPackFormat=12
 copyBuildJar=true
-
-# Forge Project
-forgeVersion=1.19.4-45.0.64
-minForgeVersion=45.0
-
-# Fabric Project
-fabricVersion=0.14.19
-minFabricVersion=0.14.0
-fabricApiVersion=0.81.1+1.19.4
-minFabricApiVersion=0.76.0
 
 # Mod Attributes
 modId=diagonalfences
 modName=Diagonal Fences
-modVersion=6.0.0
+modVersion=7.0.0
 modAuthor=Fuzs
 modDescription=Fences connecting diagonally? Wait. That's illegal.
+modLicense=MPL-2.0
 modSourceUrl=https://github.com/Fuzss/diagonalfences
 modIssueUrl=https://github.com/Fuzss/diagonalfences/issues
 modUpdateUrl=https://raw.githubusercontent.com/Fuzss/modresources/main/update/diagonalfences.json
@@ -40,6 +23,6 @@ modFabricEnvironment=*
 
 # Mod Publishing
 projectReleaseType=release
-projectGameVersions=1.19.4
+projectGameVersions=1.20
 projectCurseId=458048
 projectModrinthId=IKARgflD
