--- a/1.20/gradle.properties
+++ b/1.20/gradle.properties
@@ -26,9 +26,9 @@ projectReleaseType=release
 projectCurseForgeId=0
 projectModrinthId=0
 
-dependenciesVersionCatalog=1.20.1-v18
-dependenciesPuzzlesLibVersion=8.1.0
-dependenciesMinPuzzlesLibVersion=8.1.0
+dependenciesVersionCatalog=1.20.1-v22
+#dependenciesPuzzlesLibVersion=8.1.0
+#dependenciesMinPuzzlesLibVersion=8.1.0
 dependenciesRequiredForgeCurseForge=puzzles-lib
 dependenciesRequiredFabricCurseForge=fabric-api, forge-config-api-port-fabric, puzzles-lib
 dependenciesRequiredForgeModrinth=puzzles-lib
