--- a/1.20/gradle.properties
+++ b/1.20/gradle.properties
@@ -27,8 +27,8 @@ projectCurseForgeId=0
 projectModrinthId=0
 
 dependenciesVersionCatalog=1.20.1-v23
-#dependenciesPuzzlesLibVersion=8.1.0
-#dependenciesMinPuzzlesLibVersion=8.1.0
+dependenciesPuzzlesLibVersion=8.1.5
+dependenciesMinPuzzlesLibVersion=8.1.5
 dependenciesRequiredForgeCurseForge=puzzles-lib
 dependenciesRequiredFabricCurseForge=fabric-api, forge-config-api-port-fabric, puzzles-lib
 dependenciesRequiredForgeModrinth=puzzles-lib
