--- a/1.20.4/Fabric/build.gradle
+++ b/1.20.4/Fabric/build.gradle
@@ -1,6 +1,4 @@
-apply from: 'https://raw.githubusercontent.com/Fuzss/modresources/main/gradle/fabric.gradle'
-
-def versionCatalog = extensions.getByType(VersionCatalogsExtension).named("libs")
+apply from: "https://raw.githubusercontent.com/Fuzss/modresources/main/gradle/v2/fabric.gradle"
 
 dependencies {
     // Fabric Api
@@ -12,15 +10,10 @@ dependencies {
     // Cardinal Components
 //    modApi(include(libs.cardinalcomponentsbase.fabric.get()))
 //    modApi(include(libs.cardinalcomponentsentity.fabric.get()))
+//    modApi(include(libs.cardinalcomponentsblock.fabric.get()))
+//    modApi(include(libs.cardinalcomponentschunk.fabric.get()))
+//    modApi(include(libs.cardinalcomponentsworld.fabric.get()))
 
     // Extensible Enums
 //    modApi(include(libs.extensibleenums.fabric.get()))
-
-    // Quality of Life Mods
-    versionCatalog.findLibrary("modmenu.fabric").ifPresent {
-        modLocalRuntime(it)
-    }
-    versionCatalog.findLibrary("forgeconfigscreens.fabric").ifPresent {
-        modLocalRuntime(it)
-    }
 }
