--- a/1.20.4/gradle.properties
+++ b/1.20.4/gradle.properties
@@ -1,14 +1,11 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
+org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
-org.gradle.parallel=true
 copyBuildJar=true
 
 # Mod Attributes
 modId=diagonalblocks
 modName=Diagonal Blocks
-modVersion=8.0.4
+modVersion=20.4.0
 modAuthor=Fuzs, XFactHD
 modDescription=The core library behind the diagonal blocks mod series!
 modLicense=MPL-2.0
@@ -21,21 +18,29 @@ modForgeDisplayTest=MATCH_VERSION
 # "*" for a mod loaded on both sides, "server" for a server only mod, "client" for a client only mod
 modFabricEnvironment=*
 
+# Version Catalog
+dependenciesVersionCatalog=1.20.4-v10
+dependenciesPuzzlesLibVersion=20.4.2
+dependenciesMinPuzzlesLibVersion=20.4.2
+
 # Mod Publishing
 projectReleaseType=release
 projectCurseForgeId=0
 projectModrinthId=0
 
-dependenciesVersionCatalog=1.20.1-v23
-dependenciesPuzzlesLibVersion=8.1.5
-dependenciesMinPuzzlesLibVersion=8.1.5
-dependenciesRequiredForgeCurseForge=puzzles-lib
 dependenciesRequiredFabricCurseForge=fabric-api, forge-config-api-port-fabric, puzzles-lib
-dependenciesRequiredForgeModrinth=puzzles-lib
+dependenciesRequiredNeoForgeCurseForge=puzzles-lib
+dependenciesRequiredForgeCurseForge=forge-config-api-port-fabric, puzzles-lib
 dependenciesRequiredFabricModrinth=fabric-api, forge-config-api-port, puzzles-lib
-dependenciesOptionalForgeCurseForge=config-menus-forge
+dependenciesRequiredNeoForgeModrinth=puzzles-lib
+dependenciesRequiredForgeModrinth=forge-config-api-port, puzzles-lib
+
 dependenciesOptionalFabricCurseForge=config-menus-forge
-dependenciesOptionalForgeModrinth=forge-config-screens
+dependenciesOptionalNeoForgeCurseForge=config-menus-forge
+dependenciesOptionalForgeCurseForge=config-menus-forge
 dependenciesOptionalFabricModrinth=forge-config-screens
-#dependenciesEmbeddedFabricCurseForge=cardinal-components
+dependenciesOptionalNeoForgeModrinth=forge-config-screens
+dependenciesOptionalForgeModrinth=forge-config-screens
+
+#dependenciesEmbeddedFabricCurseForge=cardinal-components-api
 #dependenciesEmbeddedFabricModrinth=cardinal-components-api
