--- a/1.21/gradle.properties
+++ b/1.21/gradle.properties
@@ -5,7 +5,7 @@ copyBuildJar=true
 # Mod Attributes
 modId=diagonalblocks
 modName=Diagonal Blocks
-modVersion=20.4.4
+modVersion=21.0.0
 modAuthor=Fuzs, XFactHD
 modDescription=The core library behind the diagonal blocks mod series!
 modLicense=MPL-2.0
@@ -19,15 +19,16 @@ modForgeDisplayTest=MATCH_VERSION
 modFabricEnvironment=*
 
 # Version Catalog
-dependenciesVersionCatalog=1.20.4-v40
-#dependenciesPuzzlesLibVersion=20.4.2
-#dependenciesMinPuzzlesLibVersion=20.4.2
+dependenciesVersionCatalog=1.21-v8
+dependenciesPuzzlesLibVersion=21.0.8
+dependenciesMinPuzzlesLibVersion=21.0.8
 
 # Mod Publishing
 projectReleaseType=release
 projectCurseForgeId=0
 projectModrinthId=0
 
+# Required Dependencies
 dependenciesRequiredFabricCurseForge=fabric-api, forge-config-api-port-fabric, puzzles-lib
 dependenciesRequiredNeoForgeCurseForge=puzzles-lib
 dependenciesRequiredForgeCurseForge=forge-config-api-port-fabric, puzzles-lib
@@ -35,6 +36,7 @@ dependenciesRequiredFabricModrinth=fabric-api, forge-config-api-port, puzzles-li
 dependenciesRequiredNeoForgeModrinth=puzzles-lib
 dependenciesRequiredForgeModrinth=forge-config-api-port, puzzles-lib
 
+# Optional Dependencies
 dependenciesOptionalFabricCurseForge=config-menus-forge
 dependenciesOptionalNeoForgeCurseForge=config-menus-forge
 dependenciesOptionalForgeCurseForge=config-menus-forge
