--- a/1.21.11/gradle.properties
+++ b/1.21.11/gradle.properties
@@ -5,7 +5,9 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 loom.ignoreDependencyLoomVersionValidation=true
 
-project.libs=1.21.10-SNAPSHOT
+project.libs=1.21.11-SNAPSHOT
+project.libs.versions.puzzleslib.min=21.11.2
+project.libs.versions.puzzleslib.version=21.11.2
 project.platforms=Common, Fabric, NeoForge
 project.plugins=1.0-SNAPSHOT
 
@@ -15,7 +17,7 @@ mod.group=fuzs.diagonalblocks
 mod.id=diagonalblocks
 mod.license=MPL-2.0
 mod.name=Diagonal Blocks
-mod.version=21.10.0
+mod.version=21.11.0
 
 dependencies.fabric.fabricapi=required
 dependencies.fabric.forgeconfigapiport=required
